# fastapi_poetry

./: Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yaml  pyproject.toml
src/fastapi_learning/app/: config.py  database.py  exceptions.py  main.py
src/fastapi_learning/app/admin/: auth.py  views.py
src/fastapi_learning/app/bookings/: dao.py  models.py  router.py  schemas.py
src/fastapi_learning/app/dao/: base.py
src/fastapi_learning/app/hotels/: dao.py  models.py  router.py  schemas.py
src/fastapi_learning/app/images/: router.py
src/fastapi_learning/app/pages/: router.py
src/fastapi_learning/app/rooms/: dao.py  models.py  router.py  schemas.py
src/fastapi_learning/app/tasks/: celery_app.py  email_templates.py  scheduled.py  tasks.py
src/fastapi_learning/app/templates/: hotels.html
src/fastapi_learning/app/tests/: conftest.py  mock_rooms.json
src/fastapi_learning/app/tests/unit_tests/users_tets/: api_tests.py
src/fastapi_learning/app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
src/fastapi_learning/migrations/: env.py
src/fastapi_learning/migrations/versions/: 232924369c05_change_id_type_intger_to_biginteger.py  37a4da024280_add_some_types_for_mypy.py  7eea8e8f9426_some_changes_in_bookings.py  847fb887adfd_some_type_experiment.py  c92d346f0a00_initial_migration.py  e5a9446c29e8_initial_migration.py
