[tool.poetry]
name = "fastapi-learning"
version = "0.1.0"
description = ""
authors = ["Maksimov <amaksimov744@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_learning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
jinja2 = "^3.1.3"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.6"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
flower = "^2.0.1"


[tool.poetry.scripts]
start = "src.fastapi_learning.app.main:main"
tasks = "src.fastapi_learning.app.tasks.celery_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
